--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
   <div class="collapse navbar-collapse" id="navbarColor02">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" (click)="onOpenModal(null, 'add')">Add Employee <span class="sr-only">(current)</span></a>
+        <a class="nav-link" (click)="onOpenModel(null, 'add')">Add Employee <span class="sr-only">(current)</span></a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
@@ -22,7 +22,7 @@
       <div class="card m-b-30">
         <div class="card-body row">
           <div class="col-6">
-            <a href=""><img src="{{employee?.imageUrl}}" alt="" class="img-fluid rounded-circle w-60"></a>
+            <a href=""><img src="{{employee?.imageURl}}" alt="" class="img-fluid rounded-circle w-60"></a>
           </div>
           <div class="col-6 card-title align-self-center mb-0">
             <h5>{{employee?.name}}</h5>
@@ -35,9 +35,9 @@
         </ul>
         <div class="card-body">
           <div class="float-right btn-group btn-group-sm">
-            <a (click)="onOpenModal(employee, 'edit')" class="btn btn-primary tooltips" data-placement="top"
+            <a (click)="onOpenModel(employee, 'edit')" class="btn btn-primary tooltips" data-placement="top"
                data-original-title="Edit"><i class="fa fa-pencil"></i> </a>
-            <a (click)="onOpenModal(employee, 'delete')" class="btn btn-secondary tooltips" data-placement="top"
+            <a (click)="onOpenModel(employee, 'delete')" class="btn btn-secondary tooltips" data-placement="top"
                data-original-title="Delete"><i class="fa fa-times"></i></a>
           </div>
         </div>
@@ -57,7 +57,7 @@
           </button>
         </div>
         <div class="modal-body">
-          <form #addForm="ngForm" (ngSubmit)="onAddEmloyee(addForm)">
+          <form #addForm="ngForm" (ngSubmit)="onAddEmployee(addForm)">
             <div class="form-group">
               <label for="name">Name</label>
               <input type="text" ngModel name="name" class="form-control" id="name" placeholder="Name" required>
@@ -129,12 +129,12 @@
             </div>
             <div class="form-group">
               <label for="phone">Image URL</label>
-              <input type="text" ngModel="{{editEmployee?.imageUrl}}" name="imageUrl" class="form-control" id="imageUrl"
+              <input type="text" ngModel="{{editEmployee?.imageURl}}" name="imageUrl" class="form-control" id="imageUrl"
                      placeholder="Image URL">
             </div>
             <div class="modal-footer">
               <button type="button" id="" data-dismiss="modal" class="btn btn-secondary">Close</button>
-              <button (click)="onUpdateEmloyee(editForm.value)" data-dismiss="modal" class="btn btn-primary">Save
+              <button (click)="onUpdateEmployee(editForm.value)" data-dismiss="modal" class="btn btn-primary">Save
                 changes
               </button>
             </div>
@@ -159,7 +159,7 @@
           <p>Are you sure you want to delete employee {{deleteEmployee?.name}}?</p>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
-            <button (click)="onDeleteEmloyee(deleteEmployee?.id)" class="btn btn-danger" data-dismiss="modal">Yes
+            <button (click)="onDeleteEmployee(deleteEmployee?.id)" class="btn btn-danger" data-dismiss="modal">Yes
             </button>
           </div>
         </div>
